translation-tool/inputs/source_meta/objects/HSvc_CMCUsageDailyData__c.object
<CustomObject>
    <fields>
        <fullName>CMC__c</fullName>
        <label>CMC</label>
        <referenceTo>HSvc_CMC__c</referenceTo>
        <relationshipLabel>CMC Usage Daily Data</relationshipLabel>
        <relationshipName>CMC_Usage_Daily_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ConnectMinute__c</fullName>
        <label>Connect Minute</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Download__c</fullName>
        <label>Download</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fapped__c</fullName>
        <label>Fapped</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload__c</fullName>
        <label>Upload</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>CMC Usage Daily Data</label>
    <nameField>
        <displayFormat>UDD-{000000}</displayFormat>
        <label>CMC Usage Daily Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CMC Usage Daily Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>